--- a/MonsterBlog/JobApplication.html
+++ b/MonsterBlog/JobApplication.html
@@ -11,12 +11,12 @@
 <body>
   <header>
     <a href="Monster.html" class="logo">
-        <img src="logo.png" alt="Корпорація монстрів" />
+        <img src="pictures/лого.png" alt="Корпорація монстрів" />
         <!--span>Корпорація Монстрів</span-->
     </a>
     <div class="search-box">
       <input type="text" placeholder="🔍 Пошук...">
-      <img src="user.jpg" alt="User">
+      <img src="pictures/photo-user.png" alt="User">
     </div>
   </header>
 
