--- a/MonsterBlog/Monster.html
+++ b/MonsterBlog/Monster.html
@@ -12,12 +12,12 @@
 
   <header>
     <a href="index.html" class="logo">
-      <img src="logo.png" alt="Корпорація монстрів" />
+      <img src="pictures/лого.png" alt="Корпорація монстрів" />
       <!--span>Корпорація Монстрів</span-->
     </a>
     <div class="user-profile">
       <input type="text" placeholder="🔍 Пошук..." />
-      <img src="user.jpg" alt="User" />
+      <img src="pictures/photo-user.png" alt="User" />
     </div>
   </header>
 
@@ -44,7 +44,7 @@
 <div class="news-grid">
     <a href="news1.html" class="news-card">
         <div class="news-card">
-            <img src="img.png" alt="Монстри в школі" />
+            <img src="pictures/Топ 5.jpeg" alt="Монстри в школі" />
             <div class="news-text">
                 <p><strong>ТОП-5</strong> стратегій лякання у школах: що працює у 2025?<br>Обговорення нових підходів молодих монстрів.</p>
             </div>
@@ -53,7 +53,7 @@
 
     <a href="news2.html" class="news-card">
         <div class="news-card">
-            <img src="img.png" alt="Монстри в школі" />
+            <img src="pictures/Монстр стиль.jpeg" alt="Монстри в школі" />
             <div class="news-text">
                 <p><strong>Який монстр ти за стилем життя?</strong> Оновлений класифікатор 2025<br>Пройди тест, щоб дізнатись свій код у системі!</p>
             </div>
@@ -62,7 +62,7 @@
         
     <a href="news3.html" class="news-card">
         <div class="news-card">
-            <img src="img.png" alt="Монстри в школі" />
+            <img src="pictures/Правила.jpeg" alt="Монстри в школі" />
             <div class="news-text">
                 <p><strong>Нові правила</strong> використання звуків «бу!» в офісі.<br>Зміни у політиці міжвідділових лякалок.</p>
             </div>
@@ -71,7 +71,7 @@
         
     <a href="news4.html" class="news-card">
         <div class="news-card">
-            <img src="img.png" alt="Монстри в школі" />
+            <img src="pictures/Аналітика.jpeg" alt="Монстри в школі" />
             <div class="news-text">
                 <p><strong>Як змінились стандарти монстрозагроз</strong> за останні роки?<br>Аналітика від Наукового відділу Жахів.</p>
             </div>
@@ -80,7 +80,7 @@
 
     <a href="news5.html" class="news-card">
         <div class="news-card">
-            <img src="img.png" alt="Монстри в школі" />
+            <img src="pictures/Поради 10шт.jpeg" alt="Монстри в школі" />
             <div class="news-text">
                 <p><strong>10 порад для стажера:</strong> як не втратити голову (буквально)?<br>Виживальне керівництво для новачків у Монстрополісі.</p>
             </div>
@@ -89,7 +89,7 @@
 
     <a href="news6.html" class="news-card">
         <div class="news-card">
-            <img src="img.png" alt="Монстри в школі" />
+            <img src="pictures/Освіта.jpeg" alt="Монстри в школі" />
             <div class="news-text">
                 <p><strong>Чи потрібна монстру освіта?</strong><br>Порівняльний аналіз успішності в кар’єрі<br>Відповідає керівництво.</p>
             </div>
