Додано сторінки "Монстропедія", "Контакти", "Монстроподії"

--- a/MonsterBlog/Monster.html
+++ b/MonsterBlog/Monster.html
@@ -11,13 +11,13 @@
 <body>
 
   <header>
-    <a href="index.html" class="logo">
-      <img src="pictures/лого.png" alt="Корпорація монстрів" />
-      <!--span>Корпорація Монстрів</span-->
+   <a href="../Monster.html" class="logo">
+  <img src="../pictures/лого.png" alt="Корпорація монстрів" />
+  <span class="site-title">Корпорація монстрів</span>
     </a>
     <div class="user-profile">
       <input type="text" placeholder="🔍 Пошук..." />
-      <img src="pictures/photo-user.png" alt="User" />
+      <img src="../pictures/photo-user.png" alt="User" />
     </div>
   </header>
 
@@ -34,11 +34,11 @@
   </div>
 
   <nav class="topnav">
-    <a href="#">Монстропедія</a>
-    <a href="#">Працевлаштування</a>
+    <a href="Monstropedia/monstropedia.html">Монстропедія</a>
+    <a href="Job/JobApplication.html">Працевлаштування</a>
     <a href="#">Товари</a>
-    <a href="#">Події</a>
-    <a href="#">Зв’язок</a>
+    <a href="Ivent/monstropodii.html">Події</a>
+    <a href="Contact/contact.html">Зв’язок</a>
   </nav>
 
 <div class="news-grid">
