--- a/MonsterBlog/Monster.html
+++ b/MonsterBlog/Monster.html
@@ -11,13 +11,13 @@
 <body>
 
   <header>
-   <a href="../Monster.html" class="logo">
-  <img src="../pictures/лого.png" alt="Корпорація монстрів" />
+   <a href="Monster.html" class="logo">
+  <img src="pictures/лого.png" alt="Корпорація монстрів" />
   <span class="site-title">Корпорація монстрів</span>
     </a>
     <div class="user-profile">
       <input type="text" placeholder="🔍 Пошук..." />
-      <img src="../pictures/photo-user.png" alt="User" />
+      <img src="pictures/photo-user.png" alt="User" />
     </div>
   </header>
 
