--- a/client/Ivent/monstropodii.html
+++ b/client/Ivent/monstropodii.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Монстроподії — Корпорація Монстрів</title>
   <link rel="stylesheet" href="monstropodii.css" />
+  <link rel="stylesheet" href="../styles.css" />
   <link rel="stylesheet" href="calendar.css" />
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Inter:wght@700&display=swap" rel="stylesheet">
   <script defer src="calendar.js"></script>
   <script defer src="monstropodii.js"></script>
 </head>
-<body>
 
+<body>
   <header>
-    <a href="../Monster.html" class="logo">
+    <a href="../index.html" class="logo">
       <img src="../pictures/лого.png" alt="Корпорація монстрів" />
       <span class="site-title">Корпорація монстрів</span>
     </a>
+
     <div class="user-profile">
       <input type="text" placeholder="🔍 Пошук..." />
-      <img src="../pictures/photo-user.png" alt="User" />
+      <img src="../pictures/photo-user.png" alt="User" id="userAvatar" />
+      <div class="dropdown-menu" id="userDropdown">
+        <button onclick="location.href='../profile.html'">🧑‍💼 Профіль</button>
+        <button onclick="alert('Вихід із системи')">🚪 Вийти</button>
+        <hr />
+        <button onclick="openPopup()">🔐 Увійти / Зареєструватись</button>
+      </div>
+    </div>
+
+    <div id="popupOverlay" class="overlay"></div>
     </div>
   </header>
-
   <div class="marquee">
     <p>Тут може бути ваша реклама. Тут може бути ваша реклама. Тут може бути ваша реклама...</p>
   </div>
 
+  <div class="products-row">
+    <span>Товари місяця:</span>
+    <a href="#">Слизозбірник PRO+</a>
+    <a href="#">Антишумові капці «Тихі Кігті»</a>
+    <a href="#">МонстроМікс: Вітаміни для зросту рогів</a>
+    <a href="#">→</a>
+  </div>
+
   <nav class="topnav">
-     <a href="../Monstropedia/monstropedia.html">Монстропедія</a>
+    <a href="../Monstropedia/monstropedia.html">Монстропедія</a>
     <a href="../Job/JobApplication.html">Працевлаштування</a>
-    <a href="#">Товари</a>
-    <a href="monstropodii.html">Події</a>
+    <a href="../Products/products.html">Товари</a>
+    <a href="../Ivent/monstropodii.html">Події</a>
     <a href="../Contact/contact.html">Зв’язок</a>
   </nav>
 
   <div class="page-content">
     <h1>Монстроподії</h1>
     <p>
-      У цьому календарі зібрані найсвіжіші події «Корпорації Монстрів» — від пранків до балів, від перегляду фільмів до алхімічних експериментів.<br><br>
-      Кожен монстр, незалежно від кількості очей, лап чи чарівних здібностей, знайде собі розвагу до душі (або хоча б до щупальця)! Не прогав найстрашенно веселі моменти! 🌙👁✨
+      У цьому календарі зібрані найсвіжіші події «Корпорації Монстрів» — від пранків до балів, від перегляду фільмів до
+      алхімічних експериментів.<br><br>
+      Кожен монстр, незалежно від кількості очей, лап чи чарівних здібностей, знайде собі розвагу до душі (або хоча б до
+      щупальця)! Не прогав найстрашенно веселі моменти! 🌙👁✨
     </p>
 
     <div class="calendar-section">
@@ -52,7 +73,13 @@
         <table class="calendar">
           <thead>
             <tr>
-              <th>Пн</th><th>Вт</th><th>Ср</th><th>Чт</th><th>Пт</th><th>Сб</th><th>Нд</th>
+              <th>Пн</th>
+              <th>Вт</th>
+              <th>Ср</th>
+              <th>Чт</th>
+              <th>Пт</th>
+              <th>Сб</th>
+              <th>Нд</th>
             </tr>
           </thead>
           <tbody id="calendar-body"></tbody>
@@ -71,6 +98,15 @@
       </div>
     </div>
   </div>
-
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const user = JSON.parse(localStorage.getItem("user"))
+      const avatar = document.getElementById('userAvatar')
+      if (user?.avatar) {
+        avatar.src = user.avatar;
+      }
+    })
+  </script>
 </body>
+
 </html>
