--- a/client/Contact/contact.html
+++ b/client/Contact/contact.html
@@ -39,10 +39,9 @@
 
   <div class="products-row">
     <span>Товари місяця:</span>
-    <a href="#">Слизозбірник PRO+</a>
-    <a href="#">Антишумові капці «Тихі Кігті»</a>
-    <a href="#">МонстроМікс: Вітаміни для зросту рогів</a>
-    <a href="#">→</a>
+    <a href="../Products/slimecolector.html">Слизозбірник PRO+</a>
+    <a href="../Products/silenceclaws.html">Антишумові капці «Тихі Кігті»</a>
+    <a href="../Products/monstermix.html">МонстроМікс: Вітаміни для зросту рогів</a>
   </div>
 
   <nav class="topnav">
@@ -83,6 +82,8 @@
       🧘‍♂️ Пам’ятай: ми відповідаємо швидко, якщо ти залишаєш повідомлення з душею... буквально.
     </div>
   </div>
+      <script defer src="../script.js"></script>
+    <script defer src="../Login/popup.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const user = JSON.parse(localStorage.getItem("user"))
