--- a/client/Monstropedia/monstropedia.html
+++ b/client/Monstropedia/monstropedia.html
@@ -39,16 +39,15 @@
 
   <div class="products-row">
     <span>Товари місяця:</span>
-    <a href="#">Слизозбірник PRO+</a>
-    <a href="#">Антишумові капці «Тихі Кігті»</a>
-    <a href="#">МонстроМікс: Вітаміни для зросту рогів</a>
-    <a href="#">→</a>
+    <a href="../Products/slimecolector.html">Слизозбірник PRO+</a>
+    <a href="../Products/silenceclaws.html">Антишумові капці «Тихі Кігті»</a>
+    <a href="../Products/monstermix.html">МонстроМікс: Вітаміни для зросту рогів</a>
   </div>
 
   <nav class="topnav">
-    <a href="Monstropedia/monstropedia.html">Монстропедія</a>
+    <a href="../Monstropedia/monstropedia.html">Монстропедія</a>
     <a href="../Job/JobApplication.html">Працевлаштування</a>
-    <a href="products.html">Товари</a>
+    <a href="../Products/products.html">Товари</a>
     <a href="../Ivent/monstropodii.html">Події</a>
     <a href="../Contact/contact.html">Зв’язок</a>
   </nav>
@@ -89,6 +88,8 @@
       ☝️ Порада: дослідження монстрів краще проводити у присутності досвідченого страшолога!
     </div>
   </div>
+      <script defer src="../script.js"></script>
+    <script defer src="../Login/popup.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const user = JSON.parse(localStorage.getItem("user"))
