--- a/client/index.html
+++ b/client/index.html
@@ -38,10 +38,9 @@
 
     <div class="products-row">
         <span>Товари місяця:</span>
-        <a href="#">Слизозбірник PRO+</a>
-        <a href="#">Антишумові капці «Тихі Кігті»</a>
-        <a href="#">МонстроМікс: Вітаміни для зросту рогів</a>
-        <a href="#">→</a>
+        <a href="Products/slimecolector.html">Слизозбірник PRO+</a>
+        <a href="Products/silenceclaws.html">Антишумові капці «Тихі Кігті»</a>
+        <a href="Products/monstermix.html">МонстроМікс: Вітаміни для зросту рогів</a>
     </div>
 
     <nav class="topnav">
@@ -53,7 +52,7 @@
     </nav>
 
     <div class="news-grid">
-        <a href="news1.html" class="news-card">
+        <a href="News/news1.html" class="news-card">
             <div class="news-card">
                 <img src="pictures/Топ 5.jpeg" alt="Монстри в школі" />
                 <div class="news-text">
@@ -63,7 +62,7 @@
             </div>
         </a>
 
-        <a href="news2.html" class="news-card">
+        <a href="News/news2.html" class="news-card">
             <div class="news-card">
                 <img src="pictures/Монстр стиль.jpeg" alt="Монстри в школі" />
                 <div class="news-text">
@@ -73,7 +72,7 @@
             </div>
         </a>
 
-        <a href="news3.html" class="news-card">
+        <a href="News/news3.html" class="news-card">
             <div class="news-card">
                 <img src="pictures/Правила.jpeg" alt="Монстри в школі" />
                 <div class="news-text">
@@ -83,7 +82,7 @@
             </div>
         </a>
 
-        <a href="news4.html" class="news-card">
+        <a href="News/news4.html" class="news-card">
             <div class="news-card">
                 <img src="pictures/Аналітика.jpeg" alt="Монстри в школі" />
                 <div class="news-text">
@@ -93,7 +92,7 @@
             </div>
         </a>
 
-        <a href="news5.html" class="news-card">
+        <a href="News/news5.html" class="news-card">
             <div class="news-card">
                 <img src="pictures/Поради 10шт.jpeg" alt="Монстри в школі" />
                 <div class="news-text">
@@ -103,7 +102,7 @@
             </div>
         </a>
 
-        <a href="news6.html" class="news-card">
+        <a href="News/news6.html" class="news-card">
             <div class="news-card">
                 <img src="pictures/Освіта.jpeg" alt="Монстри в школі" />
                 <div class="news-text">
