--- a/client/Ivent/monstropodii.html
+++ b/client/Ivent/monstropodii.html
@@ -40,10 +40,9 @@
 
   <div class="products-row">
     <span>Товари місяця:</span>
-    <a href="#">Слизозбірник PRO+</a>
-    <a href="#">Антишумові капці «Тихі Кігті»</a>
-    <a href="#">МонстроМікс: Вітаміни для зросту рогів</a>
-    <a href="#">→</a>
+    <a href="../Products/slimecolector.html">Слизозбірник PRO+</a>
+    <a href="../Products/silenceclaws.html">Антишумові капці «Тихі Кігті»</a>
+    <a href="../Products/monstermix.html">МонстроМікс: Вітаміни для зросту рогів</a>
   </div>
 
   <nav class="topnav">
@@ -98,6 +97,8 @@
       </div>
     </div>
   </div>
+      <script defer src="../script.js"></script>
+    <script defer src="../Login/popup.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const user = JSON.parse(localStorage.getItem("user"))
