--- a/client/Job/JobApplication.html
+++ b/client/Job/JobApplication.html
@@ -36,10 +36,9 @@
 
   <div class="products-row">
     <span>Товари місяця:</span>
-    <a href="#">Слизозбірник PRO+</a>
-    <a href="#">Антишумові капці «Тихі Кігті»</a>
-    <a href="#">МонстроМікс: Вітаміни для зросту рогів</a>
-    <a href="#">→</a>
+    <a href="../Products/slimecolector.html">Слизозбірник PRO+</a>
+    <a href="../Products/silenceclaws.html">Антишумові капці «Тихі Кігті»</a>
+    <a href="../Products/monstermix.html">МонстроМікс: Вітаміни для зросту рогів</a>
   </div>
 
   <nav class="topnav">
@@ -120,6 +119,8 @@
       </form>
     </section>
   </main>
+    <script defer src="../script.js"></script>
+    <script defer src="../Login/popup.js"></script>
   <script>
         document.addEventListener("DOMContentLoaded", () => {
             const user = JSON.parse(localStorage.getItem("user"))
